# bkc

./: .gitignore  CMakeLists.txt
bfc/: actor.hpp  actorRep.hpp  bfc.hpp  bfcmain.hpp  exit.hpp  factory.hpp  flag.hpp  globals.hpp  masterThread.hpp  outColor.hpp  usage.hpp
dep/: CMakeLists.txt  makefile
dep/libtomcrypt/: CMakeLists.txt
dep/libtomcrypt/src/math/: ltm_desc.c
dep/libtommath/: CMakeLists.txt  tommath.h  tommath_private.h
dep/rsa/: CMakeLists.txt
dep/rsa/libtomcrypt/: CMakeLists.txt
dep/rsa/libtomcrypt/src/headers/: tomcrypt_macros.h
dep/rsa/libtommath/: CMakeLists.txt
dep/rsa/src/: rsaKey.cpp
dev/: CMakeLists.txt
dev/include/: adminConnector.hpp  book.hpp  chain.hpp  chainInfo.hpp  cinConnector.hpp  coInfo.hpp  confFile.hpp  connectedPeer.hpp  getMyIp.hpp  handleKeyParam.hpp  httpPost.hpp  identity.hpp  initChain.hpp  lists.hpp  meta.hpp  peerConnector.hpp  peerServer.hpp  rsaKey.hpp  servConnector.hpp  trans.hpp  version.hpp.in
dev/protocols/: protocolAdminFromAdmin.cpp  protocolAdminFromMaster.cpp  protocolChainFromMaster.cpp  protocolCinFromCin.cpp  protocolCinFromMaster.cpp  protocolMasterFromAdmin.cpp  protocolMasterFromChain.cpp  protocolMasterFromCin.cpp  protocolMasterFromPeer.cpp  protocolMasterFromServer.cpp  protocolPeerFromMaster.cpp  protocolPeerFromPeer.cpp  protocolServerFromMaster.cpp
dev/src/: adminConnector.cpp  book.cpp  chain.cpp  cinConnector.cpp  confFile.cpp  connectedPeer.cpp  getMyIp.cpp  handleKeyParam.cpp  httpPost.cpp  initChain.cpp  lists.cpp  main.cpp  peerConnector.cpp  peerServer.cpp  rsaKey.cpp  servConnector.cpp  trans.cpp
doc/: proto_newChain.doc  protocol_exchange.doc  todo.list
include/libtomcrypt/: tomcrypt.h
include/libtommath/: tommath_class.h
include/rsa/: rsaKey.hpp
src/: actorRep.cpp  bfcmain.cpp  exit.cpp  flag.cpp  masterThread.cpp  usage.cpp
test_data/: bkcnode  conf.bkc  dump.dc  private_key.der  public_key.der
test_data/adm/: dump.dc  private_key.der  public_key.der
test_data/node/: dump.dc  private_key.der  public_key.der
